--- a/board/src/main/resources/templates/Detail.html
+++ b/board/src/main/resources/templates/Detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="">
 <head>
     <meta charset="UTF-8">
     <title>Detail</title>
@@ -31,112 +31,77 @@
     </div>
 
     <!-- 댓글 작성 부분 -->
-    <div id="comment-write" class="mt-4">
-        <div class="input-group mb-3">
-            <input type="text" id="writer" class="form-control" placeholder="작성자">
-            <input type="text" id="contents" class="form-control" placeholder="내용">
-            <div class="input-group-append">
-                <button id="comment-write-btn" onclick="commentWrite()" class="btn btn-outline-secondary" type="button"><i class="fas fa-paper-plane"></i> 댓글작성</button>
-            </div>
-        </div>
+    <div id="comment-write">
+        <input type="text" id="writer" placeholder="작성자">
+        <input type="text" id="contents" placeholder="내용">
+        <button class="btn btn-primary" id="comment-write-btn" onclick="commentWrite()">댓글작성</button>
+    </div>
+    <div id="update-form" style="display: none;">
+        <h3>댓글 수정</h3>
+        <input type="hidden" id="update-comment-id">
+        <input type="text" id="update-comment-writer" placeholder="작성자">
+        <input type="text" id="update-comment-contents" placeholder="내용">
+        <button class="btn btn-primary" onclick="updateComment()">수정 완료</button>
     </div>
 
     <!-- 댓글 출력 부분 -->
     <div id="comment-list">
-        <table class="table table-striped">
-            <thead>
+        <table>
             <tr>
                 <th>댓글번호</th>
                 <th>작성자</th>
                 <th>내용</th>
-                <th></th>
-                <th></th>
+                <th>동작</th> <!-- 수정 버튼과 삭제 버튼을 포함한 새로운 열 추가 -->
             </tr>
-            </thead>
-            <tbody id="comment-table-body">
-            <tbody th:each="comment: ${commentList}">
-            <tr>
+            <tr th:each="comment: ${commentList}">
                 <td th:text="${comment.id}"></td>
                 <td th:text="${comment.writer}"></td>
                 <td th:text="${comment.contents}"></td>
-                <td class="text-right">
-                    <button onclick="openEditModal([[${comment.id}]], '[[${comment.contents}]]')" class="btn btn-warning"><i class="fas fa-edit"></i> 수정</button>
-                </td>
-                <td class="text-right">
-                    <button onclick="deleteComment([[${comment.id}]], '[[${comment.contents}]]')" class="btn btn-danger"><i class="fas fa-trash"></i> 삭제</button>
+                <td>
+                    <button class="btn btn-primary" onclick="showUpdateForm(${comment.id}, '${comment.writer}', '${comment.contents}')">수정</button>
+                    <button class="btn btn-danger" onclick="commentDelete(${comment.id})">삭제</button>
                 </td>
             </tr>
-            </tbody>
         </table>
     </div>
 </div>
-
-<!-- 수정 모달 창 -->
-<div id="editModal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <input type="text" id="editCommentInput" class="form-control" placeholder="댓글 내용">
-        <button onclick="updateComment()" class="btn btn-primary mt-2">수정 완료</button>
-    </div>
-</div>
-
-<!-- CSS 추가 -->
-<style>
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-        background-color: rgba(0,0,0,0.4);
-    }
-
-    .modal-content {
-        background-color: #fefefe;
-        margin: 15% auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 80%;
-    }
-</style>
-
+</body>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script th:inline="javascript">
     $(document).ready(function() {
-        getCommentList();
+        loadComments();
     });
 
-    const getCommentList = () => {
-        const boardId = [[${board.id}]];
-
+    const loadComments = () => {
+        const jsId = [[${board.id}]];
         $.ajax({
             type: "GET",
-            url: "/comment/list/" + boardId,
-            success: function(response) {
-                console.log("댓글 목록 조회 성공", response);
-
-                let output = "";
-                for (let i = 0; i < response.length; i++) {
-                    const comment = response[i];
+            url: "/comment/list/" + jsId,
+            success: function (res) {
+                console.log("댓글 목록 조회 성공", res);
+                let output = "<table>";
+                output += "<tr><th>댓글번호</th>";
+                output += "<th>작성자</th>";
+                output += "<th>내용</th>";
+                output += "<th>수정</th>";
+                output += "<th>삭제</th>";
+                for (let i in res) {
                     output += "<tr>";
-                    output += "<td>" + comment.id + "</td>";
-                    output += "<td>" + comment.writer + "</td>";
-                    output += "<td>" + comment.contents + "</td>";
-                    output += "<td class='text-right'><button onclick=\"openEditModal(" + comment.id + ", '" + comment.contents + "')\" class=\"btn btn-warning\"><i class=\"fas fa-edit\"></i> 수정</button></td>";
-                    output += "<td class='text-right'><button onclick=\"deleteComment(" + comment.id + ", '" + comment.contents + "')\" class=\"btn btn-danger\"><i class=\"fas fa-trash\"></i> 삭제</button></td>";
+                    output += "<td>" + res[i].id + "</td>";
+                    output += "<td>" + res[i].writer + "</td>";
+                    output += "<td>" + res[i].contents + "</td>";
+                    output += "<td><button onclick='showUpdateForm(" + res[i].id + ", \"" + res[i].writer + "\", \"" + res[i].contents + "\")'>수정</button></td>";
+                    output += "<td><button onclick='commentDelete(" + res[i].id + ")'>삭제</button></td>";
                     output += "</tr>";
                 }
-
-                $("#comment-table-body").html(output);
+                output += "</table>";
+                document.getElementById('comment-list').innerHTML = output;
             },
-            error: function(error) {
-                console.log("댓글 목록 조회 실패", error);
+            error: function (err) {
+                console.error("댓글 목록 조회 실패", err);
             }
         });
-    }
+    };
 
     const commentWrite = () => {
         const jsWriter = document.getElementById("writer").value;
@@ -144,8 +109,9 @@
         console.log("작성자: ", jsWriter);
         console.log("내용: ", jsContents);
         const jsId = [[${board.id}]];
+
         $.ajax({
-            type: "POST",
+            type: "post",
             url: "/comment/save",
             data: {
                 "writer": jsWriter,
@@ -154,9 +120,27 @@
             },
             success: function (res) {
                 console.log("요청성공", res);
-                getCommentList();
-                $("#writer").val('');
-                $("#contents").val('');
+                let output = "<table>";
+                output += "<tr><th>댓글번호</th>";
+                output += "<th>작성자</th>";
+                output += "<th>내용</th>";
+                for (let i in res) {
+                    output += "<tr>";
+                    output += "<td>" + res[i].id + "</td>";
+                    output += "<td>" + res[i].writer + "</td>";
+                    output += "<td>" + res[i].contents + "</td>";
+                    output += "<td><button onclick='commentDelete(" + res[i].id + ")'>삭제</button></td>";
+                    output += "</tr>";
+
+                    loadComments();
+                    document.getElementById('writer').value = '';
+                    document.getElementById('contents').value = '';
+                }
+
+                output += "</table>";
+                document.getElementById('comment-list').innerHTML = output;
+                document.getElementById('writer').value = '';
+                document.getElementById('contents').value = '';
             },
             error: function (err) {
                 console.log("요청실패", err);
@@ -164,73 +148,66 @@
         });
     }
 
+    // 댓글 수정 함수
+    const showUpdateForm = (id, writer, contents) => {
+        document.getElementById('update-comment-id').value = id;
+        document.getElementById('update-comment-writer').value = writer;
+        document.getElementById('update-comment-contents').value = contents;
+        document.getElementById('update-form').style.display = 'block';
+    };
+    const updateComment = () => {
+        const id = document.getElementById('update-comment-id').value;
+        const writer = document.getElementById('update-comment-writer').value;
+        const contents = document.getElementById('update-comment-contents').value;
+
+        $.ajax({
+            type: "POST",
+            url: "/comment/update",
+            data: {
+                "id": id,
+                "writer": writer,
+                "contents": contents
+            },
+            success: function (res) {
+                console.log("댓글 수정 성공", res);
+                document.getElementById('update-form').style.display = 'none';
+                loadComments();
+            },
+            error: function (err) {
+                console.error("댓글 수정 실패", err);
+            }
+        });
+    };
+
     const listReq = () => {
         console.log("목록 요청");
         const page = [[${page}]];
         location.href = "/board/paging?page="+page;
     }
-
     const updateReq = () => {
         console.log("수정 요청");
         const id = [[${board.id}]];
         location.href = "/board/update/" + id;
     }
-
     const deleteReq = () => {
         console.log("삭제 요청");
         const id = [[${board.id}]];
         location.href = "/board/delete/" + id;
     }
 
-    const openEditModal = (commentId, commentContents) => {
-        const modal = document.getElementById("editModal");
-        const editCommentInput = document.getElementById("editCommentInput");
-        editCommentInput.value = commentContents;
-        modal.setAttribute("data-comment-id", commentId);  // commentId 값을 저장
-        modal.style.display = "block";
-        $(".close").click(function() {
-            modal.style.display = "none";
-        });
-    }
-
-    const updateComment = () => {
-        const modal = document.getElementById("editModal");
-        const commentId = modal.getAttribute("data-comment-id");  // 저장된 commentId 값을 가져옴
-        const editedComment = document.getElementById("editCommentInput").value;
+    const commentDelete = (id) => {
         $.ajax({
             type: "POST",
-            url: "/comment/update/" + commentId,
-            data: {
-                "contents": editedComment
-            },
+            url: "/comment/delete/" + id,
             success: function (res) {
-                console.log("댓글 수정 성공", res);
-                getCommentList();
-                modal.style.display = "none";
+                console.log("삭제 성공", res);
+
+                loadComments();
             },
             error: function (err) {
-                console.log("댓글 수정 실패", err);
+                console.log("삭제 실패", err);
             }
         });
-    }
-
-    const deleteComment = (commentId, commentContents) => {
-        const confirmDelete = confirm("댓글을 삭제하시겠습니까?" +
-            "댓글 내용: " + commentContents);
-        if (confirmDelete) {
-            $.ajax({
-                type: "DELETE",
-                url: "/comment/delete/" + commentId,
-                success: function (res) {
-                    console.log("댓글 삭제 성공", res);
-                    getCommentList();
-                },
-                error: function (err) {
-                    console.log("댓글 삭제 실패", err);
-                }
-            });
-        }
-    }
+    };
 </script>
-</body>
 </html>
